Full resume layout - first pass.

--- a/resources/assets/sass/components/components.scss
+++ b/resources/assets/sass/components/components.scss
@@ -35,6 +35,7 @@
 @import "responsive-embed";
 @import "close";
 @import "toggler";
+@import "grid-thing";
 
 // Components w/ JavaScript
 @import "modal";
