--- a/resources/assets/sass/components/_grid.scss
+++ b/resources/assets/sass/components/_grid.scss
@@ -57,7 +57,10 @@
 @each $breakpoint, $container-max-width in $container-max-widths {
   .-max--#{$breakpoint} {
     max-width: $container-max-width;
-    margin-left: auto;
-    margin-right: auto;
+
+    &.-center {
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
 }
