--- a/resources/assets/sass/pages/resume.scss
+++ b/resources/assets/sass/pages/resume.scss
@@ -31,7 +31,7 @@ body.edit {
   height: 100vh;
   display: flex;
   flex-wrap: nowrap;
-  z-index: 5;
+  z-index: $zindex-navbar;
   transition: transform 450ms;
 
   // transitions
@@ -39,10 +39,29 @@ body.edit {
   &.edit-mode-leave-active {
     transition-duration: 650ms;
   }
+
+  .close-btn {
+    position: absolute;
+    top: 0;
+    right: 0px;
+    line-height: 1;
+    font-size: $font-size-sm;
+    margin: 12px;
+    cursor: pointer;
+    color: $gray-light;
+
+    &:hover {
+      color: $jazzy;
+    }
+
+    .close {
+      top: 3px;
+    }
+  }
 }
 
 .resume__editor, .resume__content {
-  height: 100vh;
+  height: 100%;
   align-items: center;
   transition: all 650ms, height 1ms;
 }
@@ -146,48 +165,6 @@ body.edit {
 
 
 
-// ** resume Content
-
-.resume__content {
-  flex: 0 0 1;
-  overflow-y: scroll;
-  overflow-x: visible;
-  background-color: $white;
-  transform: translateX(0%);
-  transition: all 650ms;
-
-  // transitions
-  .edit-mode-enter-active &,
-  .edit-mode-leave-active & {
-    transition: transform 650ms cubic-bezier(0.240, 0.260, 0.245, 1);
-  }
-
-  .edit-mode-enter &,
-  .edit-mode-leave-to & {
-    transform: translateX(100%);
-  }
-
-  @include media-breakpoint-down(lg) {
-    &:after {
-      content: '';
-      position: absolute;
-      width: 150px;
-      // max-width: 100%;
-      top: 0px;
-      right: 0px;
-      height: 100%;
-      background-image: linear-gradient(to left, fade-out($white, .2), fade-out($white, 1));
-      transition: all 350ms;
-    }
-
-    .preview-mode & {
-      &:after {
-        width: 0px;
-        opacity: 0;
-      }
-    }
-  }
-}
 
 
 
@@ -445,30 +422,82 @@ body.edit {
 // *************************
 
 
+
+// ** resume Content
+
+.resume__content {
+  flex: 0 0 1;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  background-color: $white;
+  transform: translateX(0%);
+  transition: all 650ms, height 1ms;
+
+  // transitions
+  .edit-mode-enter-active &,
+  .edit-mode-leave-active & {
+    transition: transform 650ms cubic-bezier(0.240, 0.260, 0.245, 1);
+  }
+
+  .edit-mode-enter &,
+  .edit-mode-leave-to & {
+    transform: translateX(100%);
+  }
+
+  @include media-breakpoint-down(lg) {
+    &:after {
+      content: '';
+      position: absolute;
+      width: 150px;
+      top: 0px;
+      right: 0px;
+      height: 100%;
+      background-image: linear-gradient(to left, fade-out($white, .2), fade-out($white, 1));
+      transition: all 350ms;
+      z-index: $zindex-sticky;
+    }
+
+    .preview-mode & {
+      &:after {
+        width: 0px;
+        opacity: 0;
+      }
+    }
+  }
+}
+
 #resume__preview {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  overflow-y: scroll;
-  overflow-x: hidden;
-
-  padding-top: 4em;
-  padding-bottom: 4em;
 
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
+  min-width: 91.667vw;
+  transition: min-width 400ms;
+
+  @include media-breakpoint-up(lg){
+    min-width: 75vw;
+  };
+
+  @include media-breakpoint-up(xl){
+    min-width: 100%;
+  };
 }
 
 .preview__phase {
   max-height: 100vh;
-  width: 100%;
-  min-width: 91.667vw;
   overflow: visible;
   padding-top: 4em;
+  padding-left: $grid-gutter-width-base;
+  padding-right: $grid-gutter-width-base;
+  margin: auto;
+  width: 100%;
+  max-width: map-get($container-max-widths, md);
 
   > *:last-child {
     margin-bottom: 4em;
@@ -481,16 +510,9 @@ body.edit {
     width: 100%;
     padding: 2em 0;
   }
-
-  @include media-breakpoint-up(lg){
-    min-width: 75vw;
-  };
-
-  @include media-breakpoint-up(xl){
-    min-width: 100%;
-  };
 }
 
+// Transitions
 .preview__phase {
   &.slide-enter-active,
   &.slide-leave-active {
@@ -498,31 +520,33 @@ body.edit {
   }
 
   &.slide-enter {
-    .content__phase {
-      opacity: 0;
-      transform: translateY(50%);
-    }
+    opacity: 0;
+    transform: translateY(50%);
   }
 
   &.slide-leave-to {
-    .content__phase {
-      opacity: 0;
-      transform: translateY(-50%);
-    }
-  }
+    opacity: 0;
+    transform: translateY(-50%);
+}
 }
 
-.slide-enter-active,
-.slide-leave-active {
+.slide-list-enter-active,
+.slide-list-leave-active,
+.slide-list-move {
   transition: all 600ms;
 }
 
-.slide-enter {
+.slide-list-leave-active {
+  // position: absolute;
+}
+
+.slide-list-enter {
   opacity: 0;
   transform: translateY(50px);
 }
 
-.slide-leave-to {
+
+.slide-list-leave-to {
   opacity: 0;
   transform: translateY(-50px);
 }
