--- a/resources/assets/sass/partials/_resume-portrait.scss
+++ b/resources/assets/sass/partials/_resume-portrait.scss
@@ -2,6 +2,7 @@
   width: 100%;
   padding-bottom: 75%;
   position: relative;
+  background-color: #f5f5f5;
 
   @include media-breakpoint-up('md') {
     padding-bottom: 56.25%;
@@ -13,7 +14,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 1;
+
 
     background: {
       size: cover;
@@ -22,17 +23,17 @@
       color: $gray-lightest;
     }
 
-    transition: all 200ms;
+
 
     &.swapper {
       opacity: 0;
-
     }
   }
 
-  .-swapping {
+  &.-swapping {
     .portrait__image.swapper {
       opacity: 1;
+      transition: opacity 200ms;
     }
   }
 
