--- a/resources/assets/sass/partials/_menu.scss
+++ b/resources/assets/sass/partials/_menu.scss
@@ -12,28 +12,31 @@
   }
 }
 
-.-hide-menu #main-menu {
+.-hide-menu #main-menu,
+.-hide-menu .logo {
   transform: translateY(-100%);
   transition: all 650ms;
 }
 
-.logo-mark {
+.logo {
   position: fixed;
   top: 0px;
   left: 0px;
   padding: 16px 24px;
-  // opacity: .5;
-  z-index: 999;
+  opacity: .8;
+  z-index: $zindex-navbar + 1;
   margin-right: 15px;
+  transition: all 650ms 450ms;
 
-  .icon {
-    width: 2em;
+  &:hover {
+    opacity: 1;
   }
 }
 
 .logo {
-
+  display: inline-block;
   cursor: pointer;
+  text-decoration: none;
 
   .logo-text {
     visibility: hidden;
@@ -43,6 +46,9 @@
   }
 
   &:hover {
+    cursor: pointer;
+    text-decoration: none;
+
     .logo-text {
       visibility: visible;
       opacity: 1;
