More stylish image lazy loading

--- a/resources/assets/sass/components/_images.scss
+++ b/resources/assets/sass/components/_images.scss
@@ -41,3 +41,12 @@
   font-size: $figure-caption-font-size;
   color: $figure-caption-color;
 }
+
+[data-image-load] {
+  opacity: 0;
+  transition: opacity 300ms;
+
+  &.-loaded {
+    opacity: 1;
+  }
+}
