--- a/resources/assets/sass/components/_grid-thing.scss
+++ b/resources/assets/sass/components/_grid-thing.scss
@@ -3,6 +3,7 @@ $grid-thing-border :  1px solid $gray-lighter;
 .grid-thing {
   display: flex;
   flex-wrap: wrap;
+  overflow: hidden;
 
   border: $grid-thing-border;
   border-radius: $border-radius-lg;
@@ -13,6 +14,7 @@ $grid-thing-border :  1px solid $gray-lighter;
     @extend .g__col;
 
     padding: 3rem !important;
+    border-top: $grid-thing-border;
     border-bottom: $grid-thing-border;
     border-right: $grid-thing-border;
     margin-bottom: -1px;
@@ -29,15 +31,11 @@ $grid-thing-border :  1px solid $gray-lighter;
       @include make-col(6);
     }
 
-    .grid-thing__item:nth-of-type(-n + 2) {
+    .grid-thing__item:nth-child(-n + 2) {
       border-top: none;
     }
-    .grid-thing__item:nth-of-type(2n) {
+    .grid-thing__item:nth-child(2n) {
       border-right: none;
-    }
-
-    .grid-thing__item:nth-last-of-type(-n + 2) {
-      border-bottom: none;
     }
   }
 }
