--- a/resources/assets/sass/components/_input-group.scss
+++ b/resources/assets/sass/components/_input-group.scss
@@ -1,3 +1,8 @@
+
+$input-group-addon-bg:           $gray-lighter !default;
+$input-group-addon-border-color: $input-border-color !default;
+
+
 //
 // Base styles
 //
