--- a/resources/assets/sass/components/components.scss
+++ b/resources/assets/sass/components/components.scss
@@ -37,6 +37,7 @@
 @import "toggler";
 @import "grid-thing";
 @import "revealer";
+@import "animations";
 
 // Components w/ JavaScript
 @import "modal";
