Fix slider input styles

--- a/resources/assets/sass/components/components.scss
+++ b/resources/assets/sass/components/components.scss
@@ -38,6 +38,7 @@
 @import "grid-thing";
 @import "revealer";
 @import "animations";
+@import "slider-input";
 
 // Components w/ JavaScript
 @import "modal";
