--- a/resources/assets/sass/components/components.scss
+++ b/resources/assets/sass/components/components.scss
@@ -39,6 +39,7 @@
 @import "revealer";
 @import "animations";
 @import "slider-input";
+@import "shepherd";
 
 // Components w/ JavaScript
 @import "modal";
