--- a/resources/assets/sass/components/_animations.scss
+++ b/resources/assets/sass/components/_animations.scss
@@ -5,7 +5,7 @@
     animation: {
       name: fade-in-up;
       duration: 1000ms;
-      fill-mode: both;
+      fill-mode: backwards;
       // timing-function: cubic-bezier(0.77, 0, 0.175, 1);
       timing-function: cubic-bezier(.64,.25,.36,.96);
     }
