--- a/resources/assets/sass/components/_modal.scss
+++ b/resources/assets/sass/components/_modal.scss
@@ -193,3 +193,12 @@ $modal-transition:            all 300ms 50ms cubic-bezier(0.240, 0.260, 0.245, 1
 @include media-breakpoint-up(lg) {
   .modal--lg { max-width: $modal-lg; }
 }
+
+.modal-backdrop {
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  z-index: $zindex-modal-backdrop;
+}
