--- a/resources/assets/sass/components/_toggler.scss
+++ b/resources/assets/sass/components/_toggler.scss
@@ -1,4 +1,13 @@
 .toggler.-active {
+  @extend %underline;
+  cursor: pointer;
+
+  &:hover{
+    color: $jazzy;
+  }
+}
+
+%underline {
   background: {
     image: linear-gradient(to bottom, $lightning, $lightning);
     repeat: no-repeat;
@@ -7,11 +16,6 @@
   }
   animation: underline 1200ms 100ms cubic-bezier(0.77, 0, 0.175, 1);
   animation-fill-mode: forwards;
-  cursor: pointer;
-
-  &:hover{
-    color: $jazzy;
-  }
 }
 
 @keyframes underline {
