--- a/resources/assets/sass/components/_modal.scss
+++ b/resources/assets/sass/components/_modal.scss
@@ -158,6 +158,7 @@ $modal-transition:            all 300ms 50ms cubic-bezier(0.240, 0.260, 0.245, 1
   display: flex;
   align-items: center; // vertically center
   justify-content: flex-end; // Right align buttons with flex property because text-align doesn't work on flex items
+  flex-wrap: wrap;
   padding: $modal-inner-padding;
   border-top: $modal-footer-border-width solid $modal-footer-border-color;
 
@@ -175,24 +176,6 @@ $modal-transition:            all 300ms 50ms cubic-bezier(0.240, 0.260, 0.245, 1
   overflow: scroll;
 }
 
-// Scale up the modal
-@include media-breakpoint-up(sm) {
-  // Automatically set modal's width for larger viewports
-  .modal__dialog {
-    // max-width: $modal-md;
-    margin: auto;
-  }
-
-  .modal__content {
-    @include box-shadow($modal-content-sm-up-box-shadow);
-  }
-
-  .modal--sm { max-width: $modal-sm; }
-}
-
-@include media-breakpoint-up(lg) {
-  .modal--lg { max-width: $modal-lg; }
-}
 
 .modal-backdrop {
   position: absolute;
