--- a/resources/assets/sass/globals/_variables.scss
+++ b/resources/assets/sass/globals/_variables.scss
@@ -240,7 +240,8 @@ $container-max-widths: (
   sm: 540px,
   md: 720px,
   lg: 960px,
-  xl: 1140px
+  xl: 1140px,
+  wumbo: 1480px,
 );
 @include _assert-ascending($container-max-widths, "$container-max-widths");
 
