--- a/resources/assets/sass/partials/_image-grid.scss
+++ b/resources/assets/sass/partials/_image-grid.scss
@@ -61,6 +61,8 @@
   .g__row + .g__row {
     margin-top: $grid-gutter-width-base;
   }
+  margin-top: $grid-gutter-width-base;
+  margin-bottom: $grid-gutter-width-base;
 }
 
 .image-grid__col {
@@ -93,6 +95,7 @@
   border-radius: $border-radius-sm;
   overflow: hidden;
   transition: all 450ms;
+  border: 1px solid $gray-lightest;
 
   &.-horz {
     padding-bottom: 75%;
@@ -108,22 +111,39 @@
 
   .caption {
     position: absolute;
-    left: 0px;
-    bottom: 0px;
-    width: 100%;
-    padding: $grid-gutter-width-base / 2;
-    // font-size: $font-size-sm;
-    opacity: 0;
-    transform: translateY(20%);
+    left: $grid-gutter-width-base / 4;
+    bottom: $grid-gutter-width-base / 4;
+    // width: 100%;
+    border-radius: $border-radius-sm;
+    padding: $grid-gutter-width-base / 4;
+    font-size: $font-size-sm;
+    // opacity: 0;
+    // transform: translateY(20%);
     transition: all 350ms;
     // text-shadow: 0px 0px 5px rgba($gray-dark, .6);
-    background-color: fade-out($late-night, .3);
+    background-color: rgba($white, .9);
+    color: $gray;
 
     &.-reverse {
       color: $white;
     }
   }
 
+   .copyright {
+      position: absolute;
+      left: $grid-gutter-width-base / 4;
+      top: $grid-gutter-width-base / 4;
+      width: 24px;
+      height: 24px;
+      color: $gray;
+      font-weight: $font-weight-bold;
+      line-height: 24px;
+      text-align: center;
+      background-color: rgba($white, .5);
+      border-radius: 50%;
+      font-size: $font-size-xs;
+    }
+// 
   &:hover {
     .caption {
       opacity: 1;
