--- a/resources/assets/sass/partials/_resume-portrait.scss
+++ b/resources/assets/sass/partials/_resume-portrait.scss
@@ -2,7 +2,7 @@
   width: 100%;
   padding-bottom: 75%;
   position: relative;
-  background-color: #f5f5f5;
+  background-color: $gray-lightest;
 
   @include media-breakpoint-up('md') {
     padding-bottom: 56.25%;
@@ -14,26 +14,25 @@
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 1;
 
 
     background: {
       size: cover;
       position: top center;
       repeat: no-repeat;
-      color: $gray-lightest;
     }
 
-
-
     &.swapper {
-      opacity: 0;
+      opacity: 1;
+      transition: opacity 200ms;
     }
   }
 
   &.-swapping {
     .portrait__image.swapper {
-      opacity: 1;
-      transition: opacity 200ms;
+      opacity: 0;
+      transition: opacity 0ms;
     }
   }
 
@@ -48,52 +47,5 @@
 .preview__phase {
   #portrait {
     padding-bottom: 75%;
-  }
-}
-
-//  Needs to be moved to somewhere...
-.loader {
-  width: 15px;
-  height: 15px;
-  position: relative;
-  z-index: 10;
-  opacity: 1;
-
-  &::after {
-    content: '';
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    background-image: linear-gradient(0deg, fade-out($jazzy, 1), $jazzy);
-    z-index: 10;
-    animation: loading infinite 800ms linear;
-  }
-
-  &.loading-enter-active,
-  &.loading-leave-active {
-    transition: all 350ms;
-  }
-
-  &.loading-enter-active {
-    transition-delay: 250ms;
-  }
-
-  &.loading-enter,
-  &.loading-leave-to {
-    opacity: 0;
-    transform: scale(.5);
-  }
-}
-
-@keyframes loading {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
   }
 }
