--- a/resources/assets/sass/components/_images.scss
+++ b/resources/assets/sass/components/_images.scss
@@ -42,11 +42,11 @@
   color: $figure-caption-color;
 }
 
-[data-image-load] {
-  opacity: 0;
-  transition: opacity 300ms;
-
-  &.-loaded {
-    opacity: 1;
-  }
-}
+// [data-image-load] {
+//   opacity: 0;
+//   transition: opacity 300ms;
+//
+//   &.-loaded {
+//     opacity: 1;
+//   }
+// }
