--- a/resources/assets/sass/components/components.scss
+++ b/resources/assets/sass/components/components.scss
@@ -40,6 +40,7 @@
 @import "animations";
 @import "slider-input";
 @import "shepherd";
+@import "loader";
 
 // Components w/ JavaScript
 @import "modal";
