--- a/resources/assets/sass/pages/about.scss
+++ b/resources/assets/sass/pages/about.scss
@@ -6,7 +6,7 @@
 .revealer {
   position: absolute;
   bottom: 0px;
-  left: 0px;
+  left: auto;
   width: 100%;
   display: block;
   will-change: height;
