--- a/resources/assets/sass/partials/_image-grid.scss
+++ b/resources/assets/sass/partials/_image-grid.scss
@@ -2,61 +2,6 @@
 // Image Grid
 //
 
-// .image-grid {
-//   position: relative;
-//   padding-bottom: 56.25%;
-//
-//   &.-short {
-//     padding-bottom: 28.125%;
-//   }
-//
-//   &.-tall {
-//     padding-bottom: 85.125%;
-//   }
-//
-//   .image-grid__wrap {
-//     position: absolute;
-//     top: 0px;
-//     left: 0px;
-//     width: 100%;
-//     height: 100%;
-//   }
-//
-//   .g__row {
-//     height: 100%;
-//   }
-// }
-//
-// .image-grid__col {
-//   height: 100%;
-//   display: flex;
-//   flex-direction: column;
-// }
-//
-// .image-grid__item {
-//   flex: 1 0 auto;
-//   max-height: 100%;
-//   background: {
-//     size : cover;
-//   }
-//   border-radius: $border-radius-sm;
-//
-//   + .image-grid__item {
-//     margin-top: $grid-gutter-width-base;
-//   }
-//
-//   &.-c8 {
-//     flex: 0 0 66.667%;
-//   }
-//
-// }
-//
-// #visual-summary {
-//   .image-grid + .image-grid {
-//     margin-top: $grid-gutter-width-base;
-//   }
-// }
-
 .image-grid {
   .g__row + .g__row {
     margin-top: $grid-gutter-width-base;
@@ -69,25 +14,23 @@
   @include make-col-ready();
   @include make-col(12);
 
-  @include media-breakpoint-down(xs){
+  @include media-breakpoint-down(sm){
     & + .image-grid__col {
       margin-top: $grid-gutter-width-base;
     }
   }
 
-  @include media-breakpoint-up(sm){
+  @include media-breakpoint-up(md){
     &.-half {
       @include make-col(6);
     }
   };
-
-
 }
 
 .image-grid__item {
   position: relative;
   background-color: $gray-lightest;
-  padding-bottom: 50%;
+  padding-bottom: 75%;
   background: {
     size : cover;
     position: center center
@@ -96,6 +39,10 @@
   overflow: hidden;
   transition: all 450ms;
   border: 1px solid $gray-lightest;
+
+  @include media-breakpoint-up(md){
+    padding-bottom: 50%;
+  };
 
   &.-horz {
     padding-bottom: 75%;
@@ -129,22 +76,69 @@
     }
   }
 
-   .copyright {
-      position: absolute;
-      left: $grid-gutter-width-base / 4;
-      top: $grid-gutter-width-base / 4;
-      width: 24px;
-      height: 24px;
-      color: $gray;
-      font-weight: $font-weight-bold;
-      line-height: 24px;
-      text-align: center;
-      background-color: rgba($white, .5);
-      border-radius: 50%;
-      font-size: $font-size-xs;
+  .copyright {
+    position: absolute;
+    left: $grid-gutter-width-base / 4;
+    top: $grid-gutter-width-base / 4;
+    width: 24px;
+    height: 24px;
+    color: $gray;
+    font-weight: $font-weight-bold;
+    line-height: 24px;
+    text-align: center;
+    background-color: rgba($white, .5);
+    border-radius: 50%;
+    font-size: $font-size-xs;
+  }
+
+  .image-grid__bg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background: {
+      size : cover;
+      position: center center
     }
-// 
+    transition: all 650ms;
+  }
+
+  .image-grid__content {
+    position: absolute;
+    width: 100%;
+    left: 0px;
+    bottom: 0px;
+    padding: $grid-gutter-width-base;
+    color: $white;
+    z-index: 2;
+    transition: all 350ms 0ms;
+
+    .content-intro {
+      max-width: 400px;
+      transform: translateY(32px);
+      opacity: 0;
+      transition: all 350ms;
+      margin-bottom: 32px;
+    }
+  }
+//
   &:hover {
+
+    .image-grid__bg {
+      filter: blur(8px);
+    }
+
+    .image-grid__content {
+      // padding: ($grid-gutter-width-base * 2) $grid-gutter-width-base;
+
+      .content-intro {
+        opacity: 1;
+        transform: translateY(0px);
+      }
+    }
+
     .caption {
       opacity: 1;
       transform: translateY(0%);
