--- a/resources/assets/sass/pages/resume.scss
+++ b/resources/assets/sass/pages/resume.scss
@@ -371,7 +371,7 @@ body.edit {
   bottom: 0px;
   left: 0px;
   width: 100%;
-  height: 50px;
+  height: 56px;
   transform: translateX(0%);
   z-index: 99;
   display: flex;
@@ -379,16 +379,8 @@ body.edit {
   justify-content: flex-start;
   align-items: center;
   padding: 16px 16px;
-  background-color: rgba($white, .85);
+  background-color: rgba($white, .95);
 
-
-  @include media-breakpoint-up(md) {
-    flex-direction: column;
-    justify-content: flex-end;
-    height: 100%;
-    width: 50px;
-    background-color: transparent;
-  }
 
   &.v-enter-active,
   &.v-leave-active {
@@ -401,19 +393,41 @@ body.edit {
 
   &.v-enter,
   &.v-leave-to {
-    transform: translateX(-100%);
+    transform: translate(0%,100%);
   }
 
 
+
+  @include media-breakpoint-up(md) {
+    flex-direction: column;
+    justify-content: flex-end;
+    height: 100%;
+    width: 50px;
+    background-color: transparent;
+
+    &.v-enter,
+    &.v-leave-to {
+      transform: translate(-100%, 0%);
+    }
+  }
+
   .sidebar-btn {
     flex: 0 0 auto;
-    margin: 6px;
-    color: $gray;
-    opacity: .5;
+    margin: 8px 12px;
+    color: $gray-lighter;
+
+
+    @include media-breakpoint-up(md) {
+      margin: 8px 6px;
+    };
 
     &:hover {
-      opacity: 1;
+      color: $jean-jacket;
       cursor: pointer;
+    }
+
+    .icon {
+      vertical-align: text-bottom;
     }
   }
 }
